src/_includes/styles/typography.css
h1 {
	margin-top: 0;
	margin-bottom: 2rem;
	font-size: var(--font-size-largest);
	line-height: 4rem;
	font-weight: var(--font-weight-normal);
	letter-spacing: 1px;
}

h2 {
	margin-top: 3rem;
	margin-bottom: 1rem;
	font-size: var(--font-size-larger);
	line-height: 3rem;
	font-weight: var(--font-weight-normal);
	letter-spacing: 2px;
}

h3 {
	font-size: var(--font-size-base);
	line-height: 2rem;
	margin-top: 3rem;
	margin-bottom: 1rem;
	font-weight: var(--font-weight-bolder);
}

p {
	margin-top: 1rem;
	margin-bottom: 1rem;
}

blockquote {
	margin: 0;
	padding-left: 1rem;
	border-left: 1rem solid var(--layer-bg);
	font-size: var(--font-size-smaller);
	font-style: italic;
}

blockquote cite {
	padding: 0.5rem 0;
	font-style: normal;
	display: block;
	text-align: right;
}

code,
pre {
	font-family: var(--font-stack-mono);
	line-height: 2rem;
	margin: 1rem 0;
}

pre {
	padding: 0.5rem 2rem;
	background-color: var(--darker-1);
}

ul,
ol {
	margin: 1rem 0;
}

li + li {
	margin-top: 1rem;
}

table {
	margin: 2rem 0;
	border-collapse: collapse;
}

tbody {
	vertical-align: baseline;
}

tbody > tr {
	box-shadow: 0 -1px 0 var(--border);
}

th,
td {
	padding-top: 0.5rem;
	padding-bottom: 0.5rem;
}

th {
	text-align: left;
}

h1:first-child,
h2:first-child,
h3:first-child,
h4:first-child,
h5:first-child,
h6:first-child,
p:first-child,
ul:first-child,
ol:first-child,
blockquote:first-child,
pre:first-child {
	margin-top: 0;
}

strong,
.strong {
	font-weight: var(--font-weight-bolder);
}

a {
	line-height: inherit; /* Fixes bug where anchor tags add tiny bits of vertical space to their container. */
	color: var(--theme-2);
	transition: color 0.2s;
}

a:hover {
	color: var(--theme-1);
}

.heading-link {
	display: none;
}

